tests/snapshots/check_cli__check_missing_tools.snap
---
source: tests/check_cli.rs
assertion_line: 63
expression: body
---
status: Some(1)
stdout:
stderr:
